[workspace]
members = ["av1an-core", "av1an"]

[profile.dev.package.av-scenechange]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 1024
debug-assertions = true
overflow-checks = true

[patch.crates-io]
ffmpeg-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg", branch = "non-exhaustive-enum" }
ffmpeg-sys-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg-sys", branch = "non-exhaustive-enum" }
